syntax = "proto3";

package codehorse.mpaas.configmap;

option go_package = "github.com/solodba/devcloud/mpaas/apps/configmap";

import "apps/configmap/pb/configmap.proto";

// ConfigMap业务接口
service RPC {
    // 创建ConfigMap
    rpc CreateConfigMap(CreateConfigMapRequest) returns(ConfigMap);
    // 删除ConfigMap
    rpc DeleteConfigMap(DeleteConfigMapRequest) returns(ConfigMap);
    // 更新ConfigMap
    rpc UpdateConfigMap(UpdateConfigMapRequest) returns(ConfigMap);
    // 查询ConfigMap
    rpc QueryConfigMap(QueryConfigMapRequest) returns(ConfigMapSet);
    // 查询ConfigMap详情
    rpc DescribeConfigMap(DescribeConfigMapRequest) returns(ConfigMap);
}

// 删除ConfigMap结构体
message DeleteConfigMapRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}

// 更新ConfigMap结构体
message UpdateConfigMapRequest {
    // @gotags: bson:"service" json:"service"
    QueryConfigMapRequest ConfigMap = 1;
}

// 查询ConfigMap结构体
message QueryConfigMapRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"keyword" json:"keyword"
    string Keyword = 2;
}

// 查询ConfigMap详情结构体
message DescribeConfigMapRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}